--- a/styles.css
+++ b/styles.css
@@ -79,17 +79,7 @@ main {
     height: 200px;
 }
 
-.dpdown-button{
-    background-color: transparent;
-    border: none;
-    font-size: 20px;
-    font-weight: bold;
-    cursor: pointer;
-    display: grid;
-    justify-content: left;
-}
-
-.description-animal{
+.p-place-hour{
     opacity: 0.6;
 }
 
