--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,12 @@ main{
     position: absolute;
 }
 
+@media screen and (max-width: 2000px){
+    .img-logo{
+        right: -0.4rem;
+    }
+}
+
 .p-welcome-container{
     display: grid;
     justify-content: center;
@@ -107,6 +113,12 @@ main{
 .project-grid-1{
     display: grid;
     justify-content: left;
+}
+
+.blackline{
+    margin: 100px;
+    background: black;
+    height: 3px;
 }
 
 .img-grid{
@@ -148,6 +160,28 @@ section {
     border-radius: 80px;
     width: 40rem;
     padding-bottom: 9px;
+}
+
+#sobre_nos{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+#sobre_nos h2{
+    font-size: 50px;
+    display: grid;
+    align-items: center;
+}
+
+#sobre_nos p{
+    font-size: 30px;
+}
+
+.img-grupo-miau{
+    width: 400px;
+    height: 500px;
+    border-radius: 40px;
 }
 
 .p-contacts{
