--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,12 @@ main{
     }
 }
 
+@media screen and (max-width: 1920px){
+    .img-logo{
+        right: 19rem;
+    }
+}
+
 .p-welcome-container{
     display: grid;
     justify-content: center;
